Fallback to JDK11 due to AWS EBS limitation